--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <!--<meta name="viewport" con tent="width=device-width"> -->
-    <title data-langNum="0">Haxball Stadium Editor Modded</title>
+    <title data-langNum="0">Haxball Stadium Editor</title>
     <!--<link rel="shortcut icon" href="https://atnnn.github.io/haxpuck/hbedit/">-->
     <link rel="shortcut icon" href="favicon.ico">
   </head>
@@ -143,16 +143,7 @@
       <div id="loading_screen">
         <div class="loading_bar"></div>
       </div>
-  
-      <div id="top_header" class="header">
-        <span class="title"><a href="https://atnnn.github.io/haxpuck/hbedit/" style = color:#fff>HaxPuck</a></span>
-        <a class="shortcut" href="http://blog.haxball.com/" target="_blank">News</a>
-        <a class="shortcut" href="https://www.haxball.com/play" target="_blank">Play</a>
-        <a class="shortcut" href="https://www.haxball.com/about" target="_blank">About</a>
-        <a class="shortcut" href="https://www.haxball.com/community", target="_blank">Community</a>
-        <a class="shortcut hidden" href="https://www.haxball.com/flash/" target="_blank">Flash</a>
-        <a class="shortcut" href="https://www.haxball.com/headless" target="_blank">Headless Host</a>
-      </div>
+
     
       <div id="layer_objl" class="hidden">
         <div class="gadget-layer"><div class="gadget-container"><div class="gadget-conts">
@@ -277,15 +268,16 @@
            <div id="tab_properties" class="selected_tool_other"></div>
          </div>
          <div id="right_tabs">
-           <button id="button_tool_select"><img alt="right-tools_select" src="./data/right-tools/right-tools_select.ico"><a data-langNum="30">선택</a></button>
-           <button id="button_tool_rotate"><img alt="right-tools_rotate" src="./data/right-tools/right-tools_rotate.ico"><a data-langNum="31">회전</a></button>
-           <button id="button_tool_scale"><img alt="right-tools_scale" src="./data/right-tools/right-tools_scale.ico"><a data-langNum="32">크기 조정</a></button>
-           <button id="button_tool_segment"><img alt="right-tools_segment" src="./data/right-tools/right-tools_segment.ico"><a data-langNum="33">세그먼트</a></button>
-           <button id="button_tool_vertex"><img alt="right-tools_vertex" src="./data/right-tools/right-tools_vertex.ico"><a data-langNum="34">버텍스</a></button>
-           <button class="hidden" id="button_tool_joint"><img alt="right-tools_joint" src="./data/right-tools/right-tools_joint.ico"><a data-langNum="38">조인트</a></button>
-           <button id="button_tool_disc"><img alt="right-tools_disc" src="./data/right-tools/right-tools_disc.ico"><a data-langNum="35">디스크</a></button>
-           <button id="button_tool_goal"><img alt="right-tools_goal" src="./data/right-tools/right-tools_goal.ico"><a data-langNum="36">골 영역</a></button>
-           <button id="button_tool_plane"><img alt="right-tools_plane" src="./data/right-tools/right-tools_plane.ico"><a data-langNum="37">플레인</a></button>
+           <button id="button_tool_select"><img alt="right-tools_select" src="./data/right-tools/right-tools_select.ico"><a data-langNum="30">Select</a></button>
+           <button id="button_tool_pan"><img alt="general-goto" src="./data/general/general_goto.ico"><a data-langNum="115">Pan</a></button>
+           <button id="button_tool_rotate"><img alt="right-tools_rotate" src="./data/right-tools/right-tools_rotate.ico"><a data-langNum="31">Rotate</a></button>
+           <button id="button_tool_scale"><img alt="right-tools_scale" src="./data/right-tools/right-tools_scale.ico"><a data-langNum="32">Scale</a></button>
+           <button id="button_tool_segment"><img alt="right-tools_segment" src="./data/right-tools/right-tools_segment.ico"><a data-langNum="33">Segment</a></button>
+           <button id="button_tool_vertex"><img alt="right-tools_vertex" src="./data/right-tools/right-tools_vertex.ico"><a data-langNum="34">Vertex</a></button>
+           <button class="hidden" id="button_tool_joint"><img alt="right-tools_joint" src="./data/right-tools/right-tools_joint.ico"><a data-langNum="38">Joint</a></button>
+           <button id="button_tool_disc"><img alt="right-tools_disc" src="./data/right-tools/right-tools_disc.ico"><a data-langNum="35">Disc</a></button>
+           <button id="button_tool_goal"><img alt="right-tools_goal" src="./data/right-tools/right-tools_goal.ico"><a data-langNum="36">Goal</a></button>
+           <button id="button_tool_plane"><img alt="right-tools_plane" src="./data/right-tools/right-tools_plane.ico"><a data-langNum="37">Plane</a></button>
          </div>
        </div>
      </div>
